--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <h1>
         Oculus Package Explorer
     </h1>
+    <p>
+        Reminder: does not work on any private app labs or games that have never been released to the oculus store
+    </p>
     <textarea id="packageName" rows="1" cols="30" style="resize: none;", placeholder="com.AnotherAxiom.GorillaTag"></textarea>    
     <button onclick="onSearchPackage()">Search Package</button>
     <!-- Info Area -->
