--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta content="Oculus Package Searcher" property="og:title" />
+    <meta content="Search a oculus game with the package name, When seeing a tiktok and you see com.Example.Example then you can search it up on here and you will find the game!" property="og:description" />
     <script>
         function onSearchPackage()
         {
