--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         Oculus Package Explorer
     </h1>
     <p>
-        Reminder: does not work on any private app labs or games that have never been released to the oculus store
+        Reminder: does not work on any private app labs or games that have never been released to the oculus store. If you would like a version with design (css made by gpt) <a href="newdesign.html">Click Here!</a>
     </p>
     <textarea id="packageName" rows="1" cols="30" style="resize: none;", placeholder="com.AnotherAxiom.GorillaTag"></textarea>    
     <button onclick="onSearchPackage()">Search Package</button>
